# PeeDeezF

./: MANIFEST.in  README.md  TEST_PDF_PAYLOADS.md  __init__.py  config.json  cve_database.py  exploit_db.py  payload_embedder.py  pdf_injector.py  pdf_parser.py  pyproject.toml  requirements.txt  setup.py  vuln_modules.py
