[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-payload-injector"
version = "1.0.0"
description = "Educational tool for PDF payload injection and vulnerability testing"
readme = "pdf_payload_injector/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Security Research Team", email = "security@example.com"}
]
keywords = ["pdf", "security", "payload", "injection", "vulnerability", "testing", "educational"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/yourusername/pdf-payload-injector"
Documentation = "https://github.com/yourusername/pdf-payload-injector/blob/main/pdf_payload_injector/README.md"
Repository = "https://github.com/yourusername/pdf-payload-injector"
Issues = "https://github.com/yourusername/pdf-payload-injector/issues"

[project.scripts]
pdf-injector = "pdf_payload_injector.pdf_injector:main"

[tool.setuptools]
packages = ["pdf_payload_injector"]

[tool.setuptools.package-data]
pdf_payload_injector = ["*.md", "*.json", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=pdf_payload_injector --cov-report=term-missing"

[tool.coverage.run]
source = ["pdf_payload_injector"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]